# galactic

./: .gitignore  Cargo.toml  README.md
.cadylo-backup/20260723-223521/docs/: galactic_mvp_cadylo_issues.json
.mvp003-backup/20260723-153559/crates/galactic_client/src/: lib.rs
crates/galactic_client/: Cargo.toml
crates/galactic_client/src/: lib.rs
crates/galactic_domain/: Cargo.toml
crates/galactic_domain/src/: ids.rs  lib.rs  math.rs  resources.rs  world.rs
crates/galactic_persistence/: Cargo.toml
crates/galactic_persistence/src/: lib.rs
crates/galactic_sim/: Cargo.toml
crates/galactic_sim/src/: command.rs  event.rs  knowledge.rs  lib.rs  production.rs  simulation.rs  starting.rs  state.rs  time.rs  universe.rs
docs/: galactic_mvp_cadrage_et_backlog.md  mvp_architecture.md
docs/poc_archive/poc_02/: Cargo.toml  README.md  evolution_poc_galaxie_3d_lisibilite_navigation.md  specification_technique_poc_galaxie_3d_bevy.md
docs/poc_archive/poc_02/docs/: poc_02_implementation_notes.md  poc_02_known_limitations.md  poc_02_manual_test_protocol.md
docs/poc_archive/poc_02/src/: app.rs  main.rs  state.rs
docs/poc_archive/poc_02/src/data/: ids.rs  (+4 more)
src/: main.rs
tools/: apply_mvp_003.py  apply_mvp_004.py  apply_mvp_005.py  apply_mvp_006.py  apply_mvp_007.py  apply_mvp_008.py  apply_mvp_009.py  apply_mvp_010.py  apply_mvp_010_b.py  apply_mvp_011.py  apply_mvp_012.py  cadylo_creation_results.jsonl  create_galactic_mvp_cadylo_issues.py  fix_apply_mvp_009_rustfmt.py  fix_mvp_004.py  fix_mvp_005.py  reconcile_mvp_004.py  update_cadylo_navigation_checkpoints.py
(+51 files in other folders)
